## Changelog

### 1.1.1
* Dev - Added compatibility with LSX Videos
* Dev - Fixed PHP warning issues
* Dev - Fixed "lazy load images" on loading size (width)

### 1.1.0
* Added compatibility with LSX 2.0
* Dev - New project structure
* Dev - UIX copied from TO 1.1 + Fixed issue with sub tabs click (settings)
* Fix - Fixed scripts/styles loading order
* Fix - Fixed small issues

### 1.0.5
* Plugin Settings added: Disable Single and Placeholder Image
* Excerpt length setting added
* Dashicon icon added for CPT
* TinyMCE shortcode button icon updated
* Template tag added
* Readme Updated
* Now compatible with Homepage Control

### 1.0.4
* Shortcode button and UI in editor
* Metakey updates
* Shortcode output restructured
* Responsive and center image settings removed

### 1.0.3
* Added more custom fields

### 1.0.2
* Switched to Human Made version of Custom-Meta-Boxes class - https://github.com/humanmade/Custom-Meta-Boxes

### 1.0.1
* Added order and orderby parameters for shortcode and widget
* General code cleanup
* Bug fix: LinkedIn field now calling the correct meta key, was previously duplicating the Facebook link.
* 1 column layout now supported

### 1.0.0
* Initial Release